--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "gsap": "^1.20.2",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
