--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
+    "flickity": "^2.0.9",
     "gsap": "^1.20.2",
     "howler": "^2.0.4",
     "vue": "^2.3.3",
