--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "connect-history-api-fallback": "^1.3.0",
-    "flickity": "^2.0.9",
     "gsap": "^1.20.2",
     "howler": "^2.0.4",
+    "jquery": "^3.2.1",
+    "slick-carousel": "^1.7.1",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
